# hhru-parser-with-postgresql

./: README.md  create_db.sql  main.py  pyproject.toml  queries.sql
DBManager/: DBManager.py
DBManagerHhRu/: DBManagerHhRu.py
abc_classes/: base_class_for_DBManager.py
data/: employers_ids.json
db_classes/: DBFiller.py  DBManagerHhRu.py
head_hunter_api/: head_hunter_api.py
src/: base_class_for_DBManager.py  base_class_for_api.py
utils/: user_interaction.py  utils.py
